k8s/mongo/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongodb-namespace
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "300Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb-namespace
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
